# picrawler

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/source/: conf.py  index.rst  openclaw.rst
docs/source/ai_interaction/: ai_interaction.rst  python_online_llms.rst  python_stt.rst  python_tts.rst  python_voice_doubao.rst  python_voice_gpt.rst  python_voice_ollama.rst
docs/source/hardware/: cpn_hardware.rst  cpn_robot_hat.rst
docs/source/python/: calibrate.rst  install_all_modules.rst  play_with_python.rst  python_action_gallery.rst  python_avoid.rst  python_bull_fight.rst  python_computer_vision.rst  python_do_single_leg.rst  python_do_step.rst  python_emotional_robot.rst  python_keyboard_control.rst  python_move.rst  python_record_new_step.rst  python_record_video.rst  python_sound_effect.rst  python_treasure_hunt.rst  python_twist.rst
examples/: 12_twist.py  13_emotional_robot.py  16_stt.py  16_tts.py  17. online_llm_test.py  17_online_llm_test.py  18_voice_active_crawler_gpt.py  19_voice_active_crawler_doubao.py  19_voice_active_crawler_ollama.py  20_voice_active_crawler_doubao.py  20_voice_active_crawler_ollama.py  3_sound_effect.py  5_display.py  8_treasure_hunt.py  9_do_step.py  9_preset_actions.py  voice_active_crawler.py
picrawler/: __init__.py  llm.py  picrawler.py  stt.py  tts.py  voice_assistant.py
picrawler-control/: SKILL.md  install.sh
picrawler-control/references/: api.md
picrawler-control/scripts/: pc.py
