[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picrawler"
authors = [
  { name="sunfounder", email="service@sunfounder.com" },
]
description = "Picrawler gait Library for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
keywords = ["picrawler", "sunfounder", "raspberry pi"]
dynamic = ["version"]

dependencies = ["readchar"]

[project.scripts]
picrawler = "picrawler:__main__"

[project.urls]
Repository = "https://github.com/sunfounder/picrawler"
Issues = "https://github.com/sunfounder/picrawler/issues"

[tool.setuptools]
packages = [
  "picrawler",
]

[tool.setuptools.dynamic]
version = {attr = "picrawler.version.__version__"}
